Completed nav hover and fixed pos stretch

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -71,6 +71,14 @@ body {
 }
 
 /* Navigation bar */
+.nav-bar {
+	white-space: nowrap;
+	overflow: hidden;
+	background: white;
+	position: fixed;
+	width: 94%;
+	border-bottom: 2px dashed black;
+}
 
 .nav-bar a {
 	text-decoration: none;
@@ -82,21 +90,37 @@ body {
 }
 
 .nav-items {
-	padding: 0;
-	margin: 4% 9% 4% 0;
+	padding: 2% 0;
+	margin: 2% 9% 2% 0;
 	vertical-align: middle;
 	text-align: left;
+	box-sizing: border-box;
 	display: inline-block;
-	height: 1%;
-	width: 2%;
+	border-top: 4px solid white;
+	border-bottom: 4px solid white;
+	background: white;
+	transition: 0.3s ease;
+}
+
+.nav-items:hover {
+	border-top: 4px solid #4eebf2;
+	border-bottom: 4px solid #4eebf2;
+	padding: 0.75% 0;
 }
 
 .logo {
-	margin: 0 0 0 10%;
+	/* margin: 0 0 0 5%; */
+	/* padding: 0 0 0 9%; */
 	vertical-align: middle;
+	display: inline-block;
 }
 
 /* Marketing header */
+
+header {
+	padding: 15% 0 5% 0;
+	border-bottom: 1px solid black;
+}
 
 .text-header-contents {
 	margin: 10% 0;
@@ -139,11 +163,6 @@ body {
 .logo-header-img {
 	width: 100%;
 	height: 100%;
-}
-
-header {
-	padding: 5% 0;
-	border-bottom: 1px solid black;
 }
 
 /* Content */
@@ -193,5 +212,5 @@ header {
 
 div.footer {
 	text-align: center;
-	margin: 0 0 10% 0;
+	margin: 5% 0 10% 0;
 }
